starstream-compiler/src/parser/definition/snapshots/starstream_compiler__parser__definition__token__tests__token_empty.snap
---
source: starstream-compiler/src/parser/definition/token.rs
description: "Code:\n\ntoken MyToken {}"
---
TokenDef {
    name: Identifier {
        name: "MyToken",
        span: 6..13,
    },
    parts: [],
}
